--- a/index.qmd
+++ b/index.qmd
@@ -6,8 +6,6 @@ page-layout: full
 
 # WSDS GitHub Workshop Oct 6 8am-12pm 2022
 
-<img align="right" src="https://user-images.githubusercontent.com/2545978/193091073-6b38734f-cd28-4946-ab2a-bebdb223d3cb.png" width="20%">  
-
 **Before the workshop, please send the organizers your GitHub username so we can add you to the workshop GitHub repositories that you will use.**
 
  - **[WSDS repository](https://github.com/RWorkflow-Workshops/WSDS-StLouis)**
@@ -16,13 +14,15 @@ page-layout: full
 
 ## Git-ting It Together: Learn to Use Git and GitHub for Your Projects
 
-### Instructor(s):
+### Instructors:
 
 * [Elizabeth “Eli” Holmes](https://github.com/eeholmes), NOAA Fisheries, Northwest Fisheries Science Center <a href = "mailto: eli.holmes@noaa.gov">Send Email</a>, <a href = "http://eeholmes.github.io/">Website</a>
 
 * [Emily "Em" Markowitz](https://github.com/EmilyMarkowitz-NOAA), NOAA Fisheries, Alaska Fisheries Science Center <a href = "mailto: emily.markowitz@noaa.gov">Send Email</a>, <a href = "https://emilyhmarkowitz.github.io/emilyhmarkowitz/">Website</a>
 
 ### Workshop description
+
+<img align="right" src="https://user-images.githubusercontent.com/2545978/193091073-6b38734f-cd28-4946-ab2a-bebdb223d3cb.png" width="20%">  
 
 Git and GitHub are used throughout the data science community, not just to keep track of code changes but also for project management and sharing of research. This workshop will get you up and running with Git and GitHub and teach you how to use some of the most powerful features. By the end of this workshop, you will be able to use Git and GitHub in the browser to create GitHub repositories; fork repositories, add content, and push back to the main repository; browse the state of your repository content at points in the past; make releases; and organize a project using GitHub issues and a project board. No prerequisites besides a GitHub account. Bring a laptop to access GitHub via a browser.
 
